# cocos2d-x-ohos

./: build-profile.json5
.hvigor/cache/: file-cache.json  task-cache.json
.hvigor/cache/native/: entry
.hvigor/outputs/sync/: output.json
.hvigor/report/: report.json
CocosDenshion/ohos/: CMakeLists.txt  SimpleAudioEngine.cpp
cmake/Modules/: CocosConfigDefine.cmake  CocosConfigDepend.cmake
cocos/: CMakeLists.txt
cocos/audio/: CMakeLists.txt  ohos.rar
cocos/audio/include/: AudioEngine.h
cocos/audio/ohos/: AudioBufferProvider.h  AudioDecoder.h  AudioDecoderMp3.cpp  AudioDecoderOgg.cpp  AudioDecoderProvider.cpp  AudioDecoderSLES.cpp  AudioDecoderWav.cpp  AudioEngine-inl.cpp  AudioEngine-inl.h  AudioEngine.cpp  AudioMixer.cpp  AudioMixer.h  AudioMixerOps.h  AudioPlayerProvider.cpp  AudioPlayerProvider.h  AudioResampler.cpp  AudioResampler.h  AudioResamplerCubic.cpp  AudioResamplerCubic.h  AudioResamplerPublic.h  CCData.cpp  CCData.h  CMakeLists.txt  PcmAudioPlayer.cpp  SimpleAudioEngine.cpp  mp3reader.cpp  mp3reader.h  tinysndfile.cpp  tinysndfile.h
cocos/audio/ohos/audio_utils/: AudioEngine-ohos.h  AudioFileUtils.h  minifloat.cpp  primitives.cpp
cocos/audio/ohos/cutils/: bitops.h  log.h
cocos/audio/ohos/utils/: CCAudioFileUtilsOhos.cpp  Compat.h  Errors.h
cocos/base/: CCConfiguration.cpp  CCController-ohos.cpp  CCEventListenerController.cpp  CCUserDefault-ohos.cpp  CMakeLists.txt  ccConfig.h  ccMacros.h
cocos/network/: CMakeLists.txt
cocos/platform/: CCApplicationProtocol.h  CCPlatformConfig.h  CCPlatformMacros.h  CMakeLists.txt
cocos/platform/ohos/: CCAccelerometer.h  CCGL-ohos.h  (+16 more)
cocos/platform/ohos/napi/: CMakeLists.txt  napi_init.cpp  plugin_manager.cpp  plugin_manager.h
cocos/platform/ohos/napi/common/: plugin_common.h
cocos/platform/ohos/napi/modules/: DPIJni.cpp  IMEJni.cpp  Java_org_cocos2dx_lib_Cocos2dxAccelerometer.cpp  Java_org_cocos2dx_lib_Cocos2dxRenderer.cpp  JniHelper.h  RawFileUtils.cpp  RawFileUtils.h  TouchesNapi.cpp  TouchesNapi.h
cocos/platform/ohos/napi/render/: egl_core.cpp  plugin_render.cpp
cocos/renderer/: CCRenderer.cpp  CCTexture2D.cpp  CCTextureAtlas.cpp
cocos/storage/: CMakeLists.txt
cocos2dx/: CMakeLists.txt
cocos2dx/include/: cocos2d.h
cocos2dx/label_nodes/: CCLabelTTF.cpp
cocos2dx/platform/: CCImage.h  CCImageCommonWebp.cpp  CCImageCommon_cpp.h  CCPlatformConfig.h  CCPlatformMacros.h
cocos2dx/platform/marmalade/: CCStdC.h
cocos2dx/platform/ohos/: CCAccelerometer.cpp  CCApplication.cpp  CCArkJsDialog.cpp  CCArkJsDialog.h  CCCommon.cpp  CCDevice.cpp  CCEGLView.cpp  CCFileUtilsOhos.cpp  CCFileUtilsOhos.h  CCImage.cpp  CCLogOhos.h  CCPlatformDefine.h  CCTextBitmap.cpp  CCTextBitmap.h  JsAudioEngine.cpp
cocos2dx/platform/ohos/libcocos2dx/: package.json
cocos2dx/platform/ohos/libcocos2dx/src/main/ets/components/audio/: AudioEngine.ts
cocos2dx/platform/ohos/libcocos2dx/src/main/ets/components/dialog/: CCDialogWorkerUtils.ts
cocos2dx/platform/ohos/napi/: CMakeLists.txt  WorkerMessageQueue.cpp  WorkerMessageQueue.h  napi_init.cpp  plugin_manager.cpp  plugin_manager.h
cocos2dx/platform/ohos/napi/modules/: DPIJni.cpp  IMEJni.cpp  Java_org_cocos2dx_lib_Cocos2dxAccelerometer.cpp  Java_org_cocos2dx_lib_Cocos2dxBitmap.cpp  Java_org_cocos2dx_lib_Cocos2dxHelper.cpp  JniHelper.cpp  JniHelper.h  RawFileUtils.cpp  RawFileUtils.h  TouchesNapi.cpp  TouchesNapi.h
cocos2dx/platform/ohos/napi/render/: egl_core.cpp  egl_core.h  plugin_render.cpp  plugin_render.h
cocos2dx/support/zip_support/: ioapi.h
cocos2dx/textures/: CCTexture2D.cpp  CCTextureETC.cpp
entry/: package-lock.json  package.json
extensions/: CMakeLists.txt
extensions/LocalStorage/: LocalStorage.cpp  LocalStorageOhos.cpp
samples/Cpp/TestCpp/: CMakeLists.txt
samples/Cpp/TestCpp/Classes/: controller.cpp
samples/Cpp/TestCpp/Classes/ExtensionsTest/: ExtensionsTest.cpp
samples/Cpp/TestCpp/Classes/TextInputTest/: TextInputTest.cpp
samples/Cpp/TestCpp/Classes/Texture2dTest/: Texture2dTest.cpp
samples/Cpp/TestCpp/proj.ohos/: .clangd  .gitignore  README_zh.md  build-profile.json5  package-lock.json  package.json
samples/Cpp/TestCpp/proj.ohos/.hvigor/cache/: file-cache.json  task-cache.json
samples/Cpp/TestCpp/proj.ohos/.hvigor/cache/native/: entry
samples/Cpp/TestCpp/proj.ohos/.hvigor/outputs/logs/details/: details.json
samples/Cpp/TestCpp/proj.ohos/.hvigor/outputs/sync/: output.json
samples/Cpp/TestCpp/proj.ohos/.hvigor/report/: report.json
samples/Cpp/TestCpp/proj.ohos/entry/: build-profile.json5  package-lock.json  package.json
samples/Cpp/TestCpp/proj.ohos/entry/src/main/: config.json  module.json5
samples/Cpp/TestCpp/proj.ohos/entry/src/main/cpp/: CMakeLists.txt  main.cpp  napi_init.cpp
samples/Cpp/TestCpp/proj.ohos/entry/src/main/ets/MainAbility/: MainAbility.ts  WorkerManager.ets  app.ets
samples/Cpp/TestCpp/proj.ohos/entry/src/main/ets/MainAbility/common/: Constants.ts
samples/Cpp/TestCpp/proj.ohos/entry/src/main/ets/MainAbility/pages/: index.ets
samples/Cpp/TestCpp/proj.ohos/entry/src/main/ets/MainAbility/workers/: cocos_worker.ts
samples/Cpp/TestCpp/proj.ohos/entry/src/main/ets/common/: Constants.ts
samples/Cpp/TestCpp/proj.ohos/entry/src/main/ets/pages/: Index.ets
samples/Cpp/TestCpp/proj.ohos/entry/src/main/ets/workers/: CocosWorker.ts  WorkerManager.ets
samples/Cpp/TestCpp/proj.ohos/entry/src/main/resources/base/element/: string.json
samples/Cpp/TestCpp/proj.ohos/entry/src/ohosTest/: config.json
samples/Cpp/TestCpp/proj.ohos/entry/src/ohosTest/ets/TestAbility/: app.ets
samples/Cpp/TestCpp/proj.ohos/entry/src/ohosTest/ets/TestAbility/pages/: index.ets
samples/Cpp/TestCpp/proj.ohos/entry/src/ohosTest/ets/TestRunner/: OpenHarmonyTestRunner.ts
samples/Cpp/TestCpp/proj.ohos/entry/src/ohosTest/ets/test/: Ability.test.ets  List.test.ets
samples/Cpp/TestCpp/proj.ohos/entry/src/ohosTest/resources/base/element/: string.json
tests/cpp-empty-test/: CMakeLists.txt
tests/cpp-empty-test/proj.ohos/entry/src/main/cpp/: CMakeLists.txt  main.cpp  napi_init.cpp
tests/cpp-tests/: CMakeLists.txt
(+59 files in other folders)
